<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.gasbuddy.viewmodel.ImagesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/relTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/colorWhite">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/three_dp"
                    android:layout_toStartOf="@id/imgMode"
                    android:background="@drawable/bg_card"
                    android:gravity="center_vertical"
                    android:hint="@string/search_for_images_here"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:isScrollContainer="true"
                    android:maxLines="2"
                    android:paddingStart="@dimen/fifteen_dp"
                    android:paddingTop="@dimen/eight_dp"
                    android:paddingEnd="@dimen/fifteen_dp"
                    android:paddingBottom="@dimen/eight_dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sixteen_sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerDataSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtSearch"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/bg_card"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/datasources"
                    android:padding="@dimen/five_dp"
                    android:spinnerMode="dropdown"
                    bind:selectedSource="@={model.source}" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerNetworkSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtSearch"
                    android:layout_margin="@dimen/five_dp"
                    android:layout_toEndOf="@id/spinnerDataSource"
                    android:background="@drawable/bg_card"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/networksource"
                    android:padding="@dimen/five_dp"
                    android:spinnerMode="dropdown"
                    bind:selectedValue="@={model.networkMethod}" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbUseCache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtSearch"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/spinnerNetworkSource"
                    android:checked="@{model.useCache}"
                    android:onClick="@{() -> model.onUseCacheClick()}"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/use_cache" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{() -> model.onModeChange()}"
                    android:padding="@dimen/eight_dp"
                    app:srcCompat="@drawable/ic_list_mode" />

                <!--
                    android:onClick="@{() -> model.onModeClick()}"
                    app:srcCompat="@drawable/ic_list_mode"
                    app:srcCompat="@{model.mode==0?(@dra)}"
                -->

            </RelativeLayout>

            <!--
                        app:srcCompat="@{(model.mode==0?(@drawable/ic_list):(@drawable/ic_grid))}"
                        android:onClick="@={() -> model.onModeClick()}"
                        app:layoutManager="@{(model.mode==0?androidx.recyclerview.widget.LinearLayoutManager:androidx.recyclerview.widget.GridLayoutManager)}"
            -->
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:animateLayoutChanges="false"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relTopBar"
            app:setAdapter="@{model.getAdapter()}" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/spinnerLoading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="@{model.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNoDataFound"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/three_dp"
            android:padding="@dimen/twenty_dp"
            android:text="@string/no_data_found"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/eighteen_sp"
            android:visibility="@{model.showEmpty}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relTopBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>